2011-02-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* sapi/include/rtems/fatal.h: Add missing includes.
	* score/include/rtems/score/tod.h: Add missing includes.
	* ftpd/ftpd.h: Add missing includes.
	* libmisc/devnull/devnull.h, libmisc/stackchk/stackchk.h:
	Fix header guard. Add missing includes.
	* score/include/rtems/debug.h, score/include/rtems/score/sysstate.h,
	score/include/rtems/score/timespec.h, 
	score/inline/rtems/score/address.inl, 
	score/inline/rtems/score/stack.inl,
	score/inline/rtems/score/states.inl: Add missing includes.
	* rtems/inline/rtems/rtems/attr.inl,
	rtems/inline/rtems/rtems/eventset.inl,
	rtems/inline/rtems/rtems/options.inl: Add missing includes.
	* libfs/src/dosfs/msdos_misc.c: Don't include <strings.h>.

2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/inline/rtems/rtems/status.inl: Add missing include.

2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libblock/src/media-path.c: Remove warnings.

2011-02-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/confdefs.h,
	score/include/rtems/score/schedulerpriority.h: Add comments.

2011-02-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* sapi/include/confdefs.h,
	score/include/rtems/score/schedulerpriority.h: C++ compatibility.

2011-02-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libnetworking/lib/ftpfs.c: Workaround for some firewalls.

2011-02-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/confdefs.h, score/Makefile.am,
	score/include/rtems/score/scheduler.h,
	score/include/rtems/score/schedulerpriority.h,
	score/include/rtems/score/thread.h,
	score/inline/rtems/score/scheduler.inl,
	score/inline/rtems/score/schedulerpriority.inl,
	score/src/scheduler.c, score/src/schedulerpriority.c,
	score/src/schedulerpriorityblock.c,
	score/src/schedulerpriorityschedule.c,
	score/src/schedulerpriorityunblock.c,
	score/src/schedulerpriorityyield.c, score/src/threadchangepriority.c,